# snail.hs

./: Dockerfile  README.md  fig.yml  snail.cabal
src/: Snail.hs
test/: Main.hs
