name:             snail
version:          0.1.0
author:           Sebastián Estrella
maintainer:       sebas007estrella@gmail.com
build-type:       Simple
cabal-version:    >=1.10

library
  exposed-modules:   Snail
  build-depends:     base >= 4.6 && < 4.8
  hs-source-dirs:    src
  default-language:  Haskell2010

test-suite tests
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  build-depends:     base, snail, hspec
  hs-source-dirs:    test
  default-language:  Haskell2010
